--- a/style.css
+++ b/style.css
@@ -54,3 +54,17 @@ button{
    border: none;
    cursor: pointer;
 }
+.produto{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+    padding: 10px;
+}
+button:hover{
+    background-color: #555;
+}
+.total{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+}
